--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=LABMedical
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/LABMedical
 spring.datasource.username=postgres
-spring.datasource.password=280686
+spring.datasource.password=102030
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
