adicao do endpoint get listas consultas
+ arquivo de "teste" do insomnia

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@ spring.application.name=LABMedical
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/LABMedical
 spring.datasource.username=postgres
-spring.datasource.password=280686
+spring.datasource.password=954370
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 
+server.port:8081
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
