--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=LABMedical
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/LABMedical
 spring.datasource.username=postgres
-spring.datasource.password=280686
+spring.datasource.password=Trsd6xux*
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
@@ -12,7 +12,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 ## Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 jwt.public.key = classpath:public-key.pem
 jwt.private.key = classpath:private-key.pem
